// protobuf for dab-tree

syntax = "proto3";
package dabTreeData;

enum FeaType {
  CONT = 0;
  DISC = 1;
  RANK = 2;
}

message Value {
  float v = 1;
  uint64 id = 2;
  int64 n = 3;
}

message DabData {
  uint32 rows = 1; //row number
  uint32 cols = 2; //column number
  repeated Value values = 3;
  repeated FeaType types = 4 [packed=true];
}
